--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "cmdk": "latest",
     "date-fns": "latest",
     "embla-carousel-react": "latest",
+    "framer-motion": "^12.23.24",
     "happy-dom": "latest",
     "input-otp": "latest",
     "lucide-react": "^0.454.0",
