--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@radix-ui/react-toggle": "latest",
     "@radix-ui/react-toggle-group": "latest",
     "@radix-ui/react-tooltip": "latest",
+    "@radix-ui/react-visually-hidden": "^1.2.3",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "^2.47.10",
     "@testing-library/dom": "latest",
